name:                dwebework
version:             0.1
synopsis:            Poorly curated web framework and utilities
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Configuration, Distribution, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Dwebework.Config
    Dwebework.Cookie
    Dwebework.Database.Schema
    Dwebework.Database.PostgreSQL
    Dwebework.Distribution
    Dwebework.Log
    Dwebework.Result
    Dwebework.Warp
  other-modules:       
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       
    aeson,
    base >=4.8 && <4.9,
    bytestring,
    Cabal,
    cookie,
    cryptonite,
    directory,
    fast-logger,
    filepath,
    HDBC,
    http-types,
    memory,
    network,
    network-uri,
    parsec,
    postgresql-typed,
    process,
    resource-pool,
    template-haskell,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    wai,
    warp >= 3,
    warp-tls
