name:                dwebework
version:             0.1
synopsis:            Poorly curated web framework and utilities
description:         A set of components that might be useful as part of a web framework, maybe, primarily based on wai/warp and PostgreSQL.
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Configuration, Distribution, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Dwebework.Config
    Dwebework.Cookie
    Dwebework.Database.Schema
    Dwebework.Database.PostgreSQL
    Dwebework.Distribution
    Dwebework.Log
    Dwebework.Response
    Dwebework.Result
    Dwebework.Warp
    Blaze.ByteString.Builder.Html.Word
  other-modules:       
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    aeson,
    base >= 4.8 && < 4.9,
    blaze-builder,
    blaze-html,
    bytestring,
    Cabal,
    cookie,
    cryptonite,
    directory,
    fast-logger,
    filepath,
    HDBC,
    http-types,
    memory,
    network,
    network-uri,
    parsec,
    postgresql-typed,
    process,
    resource-pool,
    template-haskell,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    wai,
    warp >= 3,
    warp-tls

benchmark benchmark-blaze
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: blaze.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    blaze-builder,
    bytestring,
    text,
    dwebework,
    random,
    criterion

test-suite test-blaze
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: blaze.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    blaze-builder,
    bytestring,
    text,
    dwebework,
    QuickCheck
