name:                waimwork
version:             0.1
synopsis:            Poorly curated wai-based web framework and utilities
description:         A set of components that might be useful as part of a web framework, maybe, primarily based on wai/warp and PostgreSQL.
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Configuration, Distribution, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Blaze.ByteString.Builder.Html.Word
    Waimwork.Blaze
    Waimwork.Config
    Waimwork.Cookie
    Waimwork.Database.Schema
    Waimwork.Database.PostgreSQL
    Waimwork.Distribution
    Waimwork.HTTP
    Waimwork.Log
    Waimwork.Response
    Waimwork.Result
    Waimwork.Warp
  other-modules:       
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:       
    aeson,
    attoparsec,
    base >= 4.8 && < 5,
    blaze-builder,
    blaze-html,
    blaze-markup,
    bytestring,
    Cabal,
    cookie,
    cryptonite,
    directory,
    fast-logger,
    filepath,
    HDBC,
    http-types,
    memory,
    network,
    network-uri,
    parsec,
    postgresql-typed,
    process,
    resource-pool,
    template-haskell,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    wai,
    warp >= 3,
    warp-tls,
    web-inv-route

benchmark benchmark-blaze
  type: exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is: blaze.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    blaze-builder,
    blaze-markup,
    bytestring,
    text,
    waimwork,
    random,
    criterion

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    blaze-builder,
    blaze-markup,
    bytestring,
    cookie,
    cryptonite,
    http-types,
    text,
    time,
    wai,
    waimwork,
    QuickCheck
